Added method to get story by version.  That should be everything we need for story getters for now.
